--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,13 +3,36 @@ layout: default
 header_style: minimal
 ---
 
+{% assign date_format = "%Y.%m.%d" %}
+<!--  -->
+{% capture words %}{{ content | number_of_words | minus: 180 }}{% endcapture %}
 <main class="mb-4">
     <div class="mb-4">
         {% for tag in page.tags %}
         <span class="">{{tag}}</span>
         {% endfor %}
         <h1 class="post-title mb-0">{{page.title}}</h1>
-        <p class="lead">{{page.subtitle}}</p>
+        {% if page.subtitle %}
+        <p class="lead mb-1">{{page.subtitle}}</p>
+        {% endif %}
+        <div class="text-body-secondary">
+            {% unless words contains '-' %}
+            <!--  -->
+            {{ words | plus: 150 | divided_by: 150 | append: ' mins.' }} |
+            <!--  -->
+            {% endunless %}
+            <!--  -->
+            {% if page.date %} {{ page.date | date: date_format }} {% endif %}
+        </div>
     </div>
     {{ content }}
 </main>
+
+<style>
+    figure {
+        margin-right: auto;
+        margin-left: auto;
+        margin-bottom: 1rem;
+        width: fit-content;
+    }
+</style>
